--- a/src/app/pages/servicos/categorias/categorias.page.html
+++ b/src/app/pages/servicos/categorias/categorias.page.html
@@ -28,56 +28,56 @@
     <ion-grid>
       <ion-row>
         <ion-col size="6">
-          <ion-card (click)="alert('Em construção')">
+          <ion-card (click)="onClickCategoria('controle-pragas')">
             <ion-img src="../../assets/controle-pragas.svg"></ion-img>
             <ion-label>Controle de pragas</ion-label>
           </ion-card>
         </ion-col>
 
         <ion-col size="6">
-          <ion-card (click)="alert('Em construção')">
+          <ion-card (click)="onClickCategoria('aulas-reforco')">
               <ion-img src="../../assets/aulas-reforco.svg"></ion-img>
               <ion-label>Aulas de reforço</ion-label>
           </ion-card>
         </ion-col>
 
         <ion-col size="6">
-          <ion-card (click)="alert('Em construção')">
+          <ion-card (click)="onClickCategoria('eventos')">
             <ion-img src="../../assets/eventos.svg"></ion-img>
             <ion-label>Eventos</ion-label>
           </ion-card>
         </ion-col>
 
         <ion-col size="6">
-          <ion-card (click)="alert('Em construção')">
+          <ion-card (click)="onClickCategoria('servicos-domesticos')">
               <ion-img src="../../assets/servicos-domesticos.svg"></ion-img>
               <ion-label>Serviços Domésticos</ion-label>
           </ion-card>
         </ion-col>
 
         <ion-col size="6">
-          <ion-card (click)="alert('Em construção')">
+          <ion-card (click)="onClickCategoria('automoveis')">
             <ion-img src="../../assets/automoveis.svg"></ion-img>
             <ion-label>Automóveis</ion-label>
           </ion-card>
         </ion-col>
 
         <ion-col size="6">
-          <ion-card (click)="alert('Em construção')">
+          <ion-card (click)="onClickCategoria('assistencia-tecnica')">
               <ion-img src="../../assets/assistencia-tecnica.svg"></ion-img>
               <ion-label>Assistência Técnica</ion-label>
           </ion-card>
         </ion-col>
 
         <ion-col size="6">
-          <ion-card (click)="alert('Em construção')">
+          <ion-card (click)="onClickCategoria('construcao-civil')">
             <ion-img src="../../assets/construcao-civil.svg"></ion-img>
             <ion-label>Construção Civil</ion-label>
           </ion-card>
         </ion-col>
 
         <ion-col size="6">
-          <ion-card (click)="alert('Em construção')">
+          <ion-card (click)="onClickCategoria('programacao')">
               <ion-img src="../../assets/programacao.svg"></ion-img>
               <ion-label>Programação</ion-label>
           </ion-card>
