--- a/src/app/pages/servicos/servicos.page.html
+++ b/src/app/pages/servicos/servicos.page.html
@@ -3,28 +3,15 @@
     <ion-buttons slot="start">
       <ion-menu-button></ion-menu-button>
     </ion-buttons>
-    <ion-title slot="start">Serviços</ion-title>
-  </ion-toolbar>
-
-  <ion-toolbar>
-    <ion-tabs>
-      <ion-tab-bar slot="top">
-        <ion-tab-button tab="localizacao">
-          <ion-icon name="location-outline"></ion-icon>
-          <ion-label>Localização</ion-label>
-        </ion-tab-button>
-
-        <ion-tab-button tab="categorias">
-          <ion-icon name="pencil-sharp"></ion-icon>
-          <ion-label>Categorias</ion-label>
-        </ion-tab-button>
-
-        <ion-tab-button tab="filtros">
-          <ion-icon name="filter-outline"></ion-icon>
-          <ion-label>Filtros</ion-label>
-        </ion-tab-button>
-      </ion-tab-bar>
-    </ion-tabs>
+    <ion-title>Serviços</ion-title>
+    <ion-buttons slot="end">
+      <ion-button (click)="buscarServicos()">
+        <ion-icon name="search-outline"></ion-icon>
+      </ion-button>
+      <ion-button (click)="filtrarServicos()">
+        <ion-icon name="funnel-outline"></ion-icon>
+      </ion-button>
+    </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
