Pagina Descastrar Finalizada,Pequena Alteracao de css de paginas

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -27,9 +27,9 @@
 
     <ion-footer>
       <ion-menu-toggle auto-hide="false">
-        <ion-item color="primary" routerDirection="root" routerLink="home" detail="false" routerLinkActive="selected" lines=none>
-          <ion-icon slot="start" name="log-out-outline" (click)="logout()"></ion-icon>
-          <ion-label class=labelMenuLarge (click)="logout()">Sair</ion-label>
+        <ion-item color="primary" (click)="logout()" routerDirection="root" routerLink="home" detail="false" routerLinkActive="selected" lines=none>
+          <ion-icon slot="start" name="log-out-outline"></ion-icon>
+          <ion-label class=labelMenuLarge >Sair</ion-label>
         </ion-item>
       </ion-menu-toggle>
     </ion-footer>
