--- a/src/app/pages/servicos/filtros/filtros.page.html
+++ b/src/app/pages/servicos/filtros/filtros.page.html
@@ -1,9 +1,9 @@
 <ion-header mode="ios">
     <ion-toolbar color="primary">
         <ion-buttons slot="start">
-            <ion-back-button text="" mode="md"></ion-back-button>
+            <ion-back-button text="" mode="md" defaultHref="servicos"></ion-back-button>
         </ion-buttons>
-        <ion-title slot="start" class="ion-text-start ion-padding-start-3x">
+        <ion-title slot="start" >
             Filtros
         </ion-title>
     </ion-toolbar>
