--- a/src/app/pages/anuncio/anuncio.page.html
+++ b/src/app/pages/anuncio/anuncio.page.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-toolbar color="primary">
     <ion-buttons slot="start">
-      <ion-back-button></ion-back-button>
+      <ion-back-button mode="md" defaultHref="servicos"></ion-back-button>
     </ion-buttons>
     <ion-title slot="start">Anúncio</ion-title>
     <ion-button fill="clear" slot="end" (click)="alteraFavorito(card)">
@@ -36,7 +36,7 @@
         </ion-label>
       </ion-item>
     </ion-item-group>
-    
+
     <ion-item-group>
       <ion-item lines="none">
         <h5 class=bold>
