--- a/src/app/pages/inserir-servico/inserir-servico.page.html
+++ b/src/app/pages/inserir-servico/inserir-servico.page.html
@@ -3,7 +3,7 @@
         <ion-buttons slot="start">
             <ion-back-button text="" mode="md" defaultHref="servicos"></ion-back-button>
         </ion-buttons>
-        <ion-title slot="start" class="ion-text-start ion-padding-start-3x">
+        <ion-title slot="start">
             Inserir Anúncio
         </ion-title>
     </ion-toolbar>
