--- a/src/app/pages/perfil/perfil.page.html
+++ b/src/app/pages/perfil/perfil.page.html
@@ -3,7 +3,7 @@
         <ion-buttons slot="start" class="ion-padding-start">
             <ion-back-button defaultHref="servicos" text="" icon="close"></ion-back-button>
         </ion-buttons>
-        <ion-title slot="start" class="ion-text-start ion-padding-start-MeuPerfilLabel">
+        <ion-title slot="start" >
             Meu Perfil
         </ion-title>
     </ion-toolbar>
