--- a/src/app/pages/meus-dados/meus-dados.page.scss
+++ b/src/app/pages/meus-dados/meus-dados.page.scss
@@ -35,5 +35,18 @@ ion-input{
   border-radius: 15px  15px;
   margin-bottom: 15px;
 
+
+}
+.btnEntrar[disabled]{
+  margin-top: 30px;
+  width: 60%;
+  height: 56px;
+  color: white;
+  background: rgb(134, 134, 134);
+  font-size: 20px;
+  border-radius: 15px  15px;
+  margin-bottom: 15px;
+
+
 }
 
