--- a/src/app/pages/contatos/contatos.page.html
+++ b/src/app/pages/contatos/contatos.page.html
@@ -21,15 +21,11 @@
             </ion-item>
             <ion-item>
                 <ion-icon name="logo-instagram"></ion-icon>
-                <ion-input mode="ios" clearInput="true" placeholder="@user_teste" name="instagram" [(ngModel)]="usuario.insta"></ion-input>
+                <ion-input mode="ios" clearInput="true" placeholder="@user_teste" name="insta" [(ngModel)]="usuario.insta"></ion-input>
             </ion-item>
             <ion-item>
                 <ion-icon name="phone-portrait-outline"></ion-icon>
                 <ion-input type="number" mode="ios" clearInput="true" placeholder="(00) 00000-0000 " name="celular" [(ngModel)]="usuario.celular" ></ion-input>
-            </ion-item>
-            <ion-item>
-                <ion-icon name="call-outline"></ion-icon>
-                <ion-input type="number"  mode="ios" clearInput="true" placeholder="(00) 0000-0000" name="fixo" [(ngModel)]="usuario.fixo" ></ion-input>
             </ion-item>
         </ion-list>
 
