--- a/src/app/pages/cadastro/cadastro.page.scss
+++ b/src/app/pages/cadastro/cadastro.page.scss
@@ -53,4 +53,8 @@ ion-input {
   font-size: 20px;
   border-radius: 15px 15px;
   margin-bottom: 15px;
+
+}
+.btnEntrar[disabled]{
+  background-color: rgb(110, 110, 110);
 }
