--- a/src/app/pages/servicos/servicos.page.html
+++ b/src/app/pages/servicos/servicos.page.html
@@ -16,20 +16,23 @@
 </ion-header>
 
 <ion-content>
-    <ion-card *ngFor="let card of cards">
+    <ion-card *ngFor="let post of posts">
         <ion-item lines="full">
-            <ion-card-subtitle (click)="abreAnuncio(card)">{{card.categoria}}</ion-card-subtitle>
+            <ion-card-subtitle (click)="abreAnuncio(post)">{{post.categoria}}</ion-card-subtitle>
+            <ion-button fill="clear" slot="end" (click)="deletaAnuncio(post.id)">
+                <ion-icon slot="icon-only" name="trash-outline"></ion-icon>
+            </ion-button>
             <ion-button fill="clear" slot="end">
                 <ion-icon slot="icon-only" name="share-social-outline"></ion-icon>
             </ion-button>
-            <ion-button fill="clear" slot="end" (click)="alteraFavorito(card)">
-                <ion-icon slot="icon-only" [class]="card.favorito ? 'heartSelected' : ''" [name]="card.favorito ? 'heart' : 'heart-outline'"></ion-icon>
+            <ion-button fill="clear" slot="end" (click)="alteraFavorito(post)">
+                <ion-icon slot="icon-only" [class]="post.favorito ? 'heartSelected' : ''" [name]="post.favorito ? 'heart' : 'heart-outline'"></ion-icon>
             </ion-button>
         </ion-item>
 
-        <ion-card-content (click)="abreAnuncio(card)">
-            <ion-card-title>{{card.subcategoria}}</ion-card-title>
-            {{card.descricao}}
+        <ion-card-content (click)="abreAnuncio(post)">
+            <ion-card-title>{{post.subcategoria}}</ion-card-title>
+            {{post.descricao}}
         </ion-card-content>
 
         <ion-grid>
@@ -37,13 +40,13 @@
                 <ion-col size="8">
                     <ion-label fill="clear">
                         <ion-icon slot="icon-only" name="location-outline"></ion-icon>
-                        {{card.cidade}} - {{card.estado}}
+                        {{post.cidade}} - {{post.estado}}
                     </ion-label>
                 </ion-col>
                 <ion-col size="4">
                     <ion-label fill="clear">
                         <ion-icon slot="icon-only" name="time-outline"></ion-icon>
-                        {{card.data}}
+                        {{post.data}}
                     </ion-label>
                 </ion-col>
             </ion-row>
