--- a/src/app/pages/contatos/contatos.page.html
+++ b/src/app/pages/contatos/contatos.page.html
@@ -25,12 +25,12 @@
             </ion-item>
             <ion-item>
                 <ion-icon name="phone-portrait-outline"></ion-icon>
-                <ion-input type="number" mode="ios" clearInput="true" placeholder="(00) 00000-0000 " name="celular" [(ngModel)]="usuario.celular" ></ion-input>
+                <ion-input type="cel" mode="ios" clearInput="true" placeholder="(00) 00000-0000 " name="celular" [(ngModel)]="usuario.celular" required ></ion-input>
             </ion-item>
         </ion-list>
 
         <div class="n3">
-            <button class="btnEntrar" type="submit" >
+            <button class="btnEntrar" type="submit" [disabled]="formulario.invalid" >
         Salvas Alterações
         </button>
         </div>
