Ícone da lixeira para deletar o anúncio do usuário implementado completamente, back-end postagem de serviços implementado completamente, reajustes feitos na tela de filtros, perfil e inserir-serviço

--- a/src/app/pages/inserir-servico/inserir-servico.page.html
+++ b/src/app/pages/inserir-servico/inserir-servico.page.html
@@ -4,7 +4,7 @@
             <ion-back-button text="" mode="md" defaultHref="servicos"></ion-back-button>
         </ion-buttons>
         <ion-title slot="start">
-            Inserir Anúncio
+            {{title}}
         </ion-title>
     </ion-toolbar>
 </ion-header>
