--- a/src/app/pages/servicos/filtros/filtros.page.html
+++ b/src/app/pages/servicos/filtros/filtros.page.html
@@ -83,8 +83,8 @@
                 Data da Postagem</ion-label>
             <ion-item detail lines="none">
                 <ion-icon slot="start" icon="calendar"></ion-icon>
-                <ion-datetime placeholder="Selecione uma data" min="2021" display-format="DD/MM/YYYY" picker-format="DD/MMMM/YYYY " dayShortNames="Dom, Seg, Ter, Qua, Qui, Sex, Sáb" dayNames="Domingo, Segunda, Terça, Quarta, Quinta, Sexta, Sábado
-                " monthShortNames="Jan, Fev, Mar, Abr, Maio, Jun, Jul, Ago, Set, Out, Nov, Dez" monthNames="Janeiro, Fevereiro, Março, Abril, Maio, Junho, Julho, Agosto, Setembro, Outubro, Novembro, Dezembro" [(ngModel)]="selected[4]" (ngModelChange)="selectChanged($event, 4)"></ion-datetime>
+                <ion-datetime placeholder="Selecione uma data" min="2021" display-format="DD/MM/YYYY" picker-format="DD/MMMM/YYYY" dayShortNames="Dom, Seg, Ter, Qua, Qui, Sex, Sáb" dayNames="Domingo, Segunda, Terça, Quarta, Quinta, Sexta, Sábado
+                " monthShortNames="Jan, Fev, Mar, Abr, Maio, Jun, Jul, Ago, Set, Out, Nov, Dez" monthNames="Janeiro, Fevereiro, Março, Abril, Maio, Junho, Julho, Agosto, Setembro, Outubro, Novembro, Dezembro" [(ngModel)]="data" (ngModelChange)="selectChanged($event, 4)"></ion-datetime>
             </ion-item>
         </ion-list>
     </ion-list>
