presentToast quando não foram informados todos os campos em inserir-serviço

--- a/src/app/pages/inserir-servico/inserir-servico.page.html
+++ b/src/app/pages/inserir-servico/inserir-servico.page.html
@@ -86,7 +86,7 @@
                 <ion-button expand="block" color="success" class="ion-text-center ion-padding-horizontal" (click)="onPostar()">{{buttonName}}</ion-button>
             </ion-item>
             <h6 class="ion-no-margin ion-margin-bottom ion-padding-bottom ion-padding-start">Ao publicar você concorda e aceita nossos
-                <p class="ion-no-margin"><a href="">Termos de Uso</a> e <a href="">Privacidade </a></p>
+                <p class="ion-no-margin"><a href="https://ebicos.com.br/termos.html" target="_blank">Termos de Uso</a> e <a href="https://ebicos.com.br/politica.html" target="_blank">Privacidade </a></p>
             </h6>
         </ion-item-group>
 
