Lógica de favoritar e desfavoritar finalizada. Correção no comportamento da aparência dos botões de favoritar feita

--- a/src/app/pages/anuncio/anuncio.page.html
+++ b/src/app/pages/anuncio/anuncio.page.html
@@ -6,8 +6,8 @@
     <ion-title slot="start">Anúncio</ion-title>
     <ion-button fill="clear" slot="end" (click)="alteraFavorito(card)">
       <ion-icon slot="icon-only"
-      [class]="card.favorito ? 'heartSelected' : 'heartUnselected'"
-      [name]="card.favorito ? 'heart' : 'heart-outline'"></ion-icon>
+      [class]="existeFavorito(card.id) ? 'heartSelected' : 'heartUnselected'"
+      [name]="existeFavorito(card.id) ? 'heart' : 'heart-outline'"></ion-icon>
     </ion-button>
     <ion-button fill="clear" slot="end">
       <ion-icon slot="icon-only" name="share-social-outline" style="color: white"></ion-icon>
