--- a/src/app/pages/favoritos/favoritos.page.html
+++ b/src/app/pages/favoritos/favoritos.page.html
@@ -1,49 +1,53 @@
 <ion-header>
   <ion-toolbar color="primary">
-    <ion-buttons slot="start">
-      <ion-menu-button></ion-menu-button>
-    </ion-buttons>
-    <ion-title slot="start">Favoritos</ion-title>
+      <ion-buttons slot="start">
+          <ion-menu-button></ion-menu-button>
+      </ion-buttons>
+      <ion-title>{{title}}</ion-title>
   </ion-toolbar>
-
 </ion-header>
 
-<ion-content>
-  <ng-container *ngFor="let card of cards">
-    <ion-card *ngIf="card.favorito">
-      <ion-item lines="full">
-        <ion-card-subtitle (click)="abreAnuncio(card)">{{card.categoria}}</ion-card-subtitle>
-        <ion-button fill="clear" slot="end">
-          <ion-icon slot="icon-only" name="share-social-outline"></ion-icon>
-        </ion-button>
-        <ion-button fill="clear" slot="end" (click)="alteraFavorito(card)">
-          <ion-icon slot="icon-only"
-          [class]="card.favorito ? 'heartSelected' : ''"
-          [name]="card.favorito ? 'heart' : 'heart-outline'"></ion-icon>
-        </ion-button>
-      </ion-item>
+<ion-content *ngIf="existeAlgumFavorito()">
+    <ng-container *ngFor="let post of posts">
+        <ion-card *ngIf="existeFavorito(post.id, idUserLogado)">
+            <ion-item lines="full">
+                <ion-card-subtitle (click)="abreAnuncio(post)">{{post.categoria}}</ion-card-subtitle>
+                <ion-button *ngIf="post.userId === idUserLogado" fill="clear" slot="end" (click)="presentAlertConfirm(post.id)">
+                    <ion-icon slot="icon-only" name="trash-outline"></ion-icon>
+                </ion-button>
+                <ion-button fill="clear" slot="end">
+                    <ion-icon slot="icon-only" name="share-social-outline"></ion-icon>
+                </ion-button>
+                <ion-button fill="clear" slot="end" (click)="alteraFavorito(post)">
+                    <ion-icon slot="icon-only" [class]="existeFavorito(post.id, idUserLogado) ? 'heartSelected' : ''" [name]="existeFavorito(post.id, idUserLogado) ? 'heart' : 'heart-outline'"></ion-icon>
+                </ion-button>
+            </ion-item>
 
-      <ion-card-content (click)="abreAnuncio(card)">
-        <ion-card-title>{{card.subcategoria}}</ion-card-title>
-        {{card.descricao}}
-      </ion-card-content>
+            <ion-card-content (click)="abreAnuncio(post)">
+                <ion-card-title>{{post.subcategoria}}</ion-card-title>
+                {{post.descricao}}
+            </ion-card-content>
 
-      <ion-grid>
-        <ion-row>
-          <ion-col size="8">
-            <ion-label fill="clear">
-              <ion-icon slot="icon-only" name="location-outline"></ion-icon>
-              {{card.cidade}} - {{card.estado}}
-            </ion-label>
-          </ion-col>
-          <ion-col size="4">
-            <ion-label fill="clear">
-              <ion-icon slot="icon-only" name="time-outline"></ion-icon>
-              {{card.data}}
-            </ion-label>
-          </ion-col>
-        </ion-row>
-      </ion-grid>
-    </ion-card>
-  </ng-container>
+            <ion-grid>
+                <ion-row>
+                    <ion-col size="8">
+                        <ion-label fill="clear">
+                            <ion-icon slot="icon-only" name="location-outline"></ion-icon>
+                            {{post.cidade}} - {{post.estado}}
+                        </ion-label>
+                    </ion-col>
+                    <ion-col size="4">
+                        <ion-label fill="clear">
+                            <ion-icon slot="icon-only" name="time-outline"></ion-icon>
+                            {{post.data}}
+                        </ion-label>
+                    </ion-col>
+                </ion-row>
+            </ion-grid>
+        </ion-card>
+    </ng-container>
+</ion-content>
+
+<ion-content *ngIf="!existeAlgumFavorito()">
+    <ion-label>Não existem favoritos!</ion-label>
 </ion-content>
